--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 20th of July 2020, 562 new confirmed cases and 12 deaths were recorded in Nigeria</li>
-                            <li>Till date, 37225 cases have been confirmed, 15333 cases have been discharged and 801 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 562 new cases are reported from 21 states- FCT (102), Lagos (100), Plateau (52), Kwara (50), Abia (47), Kaduna(35), Benue (34), Oyo (26), Ebonyi (24), Kano (16), Niger (15), Anambra (14), Gombe (12), Edo (11), Rivers (6), Nasarawa (5), Delta (5), Borno (3), Enugu (2), Bauchi (2), Kebbi (1)</li>
+                            <li>On the 21st of July 2020, 576 new confirmed cases and 4 deaths were recorded in Nigeria</li>
+                            <li>Till date, 37801 cases have been confirmed, 15677 cases have been discharged and 805 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 576 new cases are reported from 22 states- Lagos (88), Kwara (87), FCT (82), Plateau (62), Ondo (39), Enugu (28), Oyo (26), Taraba (24), Kaduna (20), Ebonyi (20), Edo (17), Cross River (16), Kano (14), Rivers (11), Ogun (10), Delta (9), Nasarawa (8), Osun (8), Katsina (3), Imo (2), Kebbi (1), Borno (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -74,6 +74,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">576 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-88<br>Kwara-87<br>FCT-82<br>Plateau-62<br>Ondo-39<br>Enugu-28<br>Oyo-26<br>Taraba-24<br>Kaduna-20<br>Ebonyi-20<br>Edo-17<br>Cross River-16<br>Kano-14<br>Rivers-11<br>Ogun-10<br>Delta-9<br>Nasarawa-8<br>Osun-8<br>Katsina-3<br>Imo-2<br>Kebbi-1<br>Borno-1<br><br>37,801 confirmed<br>15,677 discharged<br>805 deaths <a href="https://t.co/LbyjQ81wtJ">pic.twitter.com/LbyjQ81wtJ</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1285710091929427972?ref_src=twsrc%5Etfw">July 21, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">When you do not practice preventive behaviours, you increase the risk of spreading <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> to your parents and the elderly<a href="https://twitter.com/hashtag/TakeResponsiblity?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsiblity</a> to keep them safe- observe physical distancing, wear a face mask, and wash your hands frequently. <a href="https://t.co/2AA7D3CCRq">pic.twitter.com/2AA7D3CCRq</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1285601649113923585?ref_src=twsrc%5Etfw">July 21, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">562 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-102<br>Lagos-100<br>Plateau-52<br>Kwara-50<br>Abia-47<br>Kaduna-35<br>Benue-34<br>Oyo-26<br>Ebonyi-24<br>Kano-16<br>Niger-15<br>Anambra-14<br>Gombe-12<br>Edo-11<br>Rivers-6<br>Nasarawa-5<br>Delta-5<br>Borno-3<br>Enugu- 2<br>Bauchi-2<br>Kebbi- 1<br><br>37,225 confirmed<br>15,333 discharged<br>801 deaths <a href="https://t.co/YOnyl1KNUP">pic.twitter.com/YOnyl1KNUP</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1285342585591136268?ref_src=twsrc%5Etfw">July 20, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
