--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 21st of July 2020, 576 new confirmed cases and 4 deaths were recorded in Nigeria</li>
-                            <li>Till date, 37801 cases have been confirmed, 15677 cases have been discharged and 805 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 576 new cases are reported from 22 states- Lagos (88), Kwara (87), FCT (82), Plateau (62), Ondo (39), Enugu (28), Oyo (26), Taraba (24), Kaduna (20), Ebonyi (20), Edo (17), Cross River (16), Kano (14), Rivers (11), Ogun (10), Delta (9), Nasarawa (8), Osun (8), Katsina (3), Imo (2), Kebbi (1), Borno (1)</li>
+                            <li>On the 23rd of July 2020, 604 new confirmed cases and 20 deaths were recorded in Nigeria</li>
+                            <li>Till date, 38948 cases have been confirmed, 16061 cases have been discharged and 833 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 604 new cases are reported from 21 states- Lagos(203), Oyo(87), FCT(79), Edo(41), Osun(35), Ogun(24), Rivers(22), Kaduna(22), Akwa Ibom(20), Plateau(18), Delta(9), Ebonyi(9), Imo(8), Enugu(5), Kano(5), Cross River(5), Katsina(4), Nasarawa(3), Borno(2), Ekiti(2), Bauchi(1)</li>
                         </ul>
                     </div>
                 </div>
@@ -74,6 +74,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">604 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-203<br>Oyo-87<br>FCT-79<br>Edo-41<br>Osun-35<br>Ogun-24<br>Rivers-22<br>Kaduna-22<br>Akwa Ibom-20<br>Plateau-18<br>Delta-9<br>Ebonyi-9<br>Imo-8<br>Enugu-5<br>Kano-5<br>Cross River-5<br>Katsina-4<br>Nasarawa-3<br>Borno-2<br>Ekiti-2<br>Bauchi-1<br><br>38,948 confirmed<br>16,061 discharged<br>833 deaths <a href="https://t.co/fZgmSoSeSH">pic.twitter.com/fZgmSoSeSH</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1286429356286517250?ref_src=twsrc%5Etfw">July 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Today, the <a href="https://twitter.com/hashtag/NCDCTeam?src=hash&amp;ref_src=twsrc%5Etfw">#NCDCTeam</a> joined other Government Institutions in a workshop convened by <a href="https://twitter.com/nighealthwatch?ref_src=twsrc%5Etfw">@nighealthwatch</a> to discuss use of the National Action Health Plan for Health Security (NAPHS) as a tool to secure sustainable funding for epidemic preparedness in Nigeria.<a href="https://twitter.com/hashtag/PreventEpidemicsNaija?src=hash&amp;ref_src=twsrc%5Etfw">#PreventEpidemicsNaija</a> <a href="https://t.co/Px7obLridq">https://t.co/Px7obLridq</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1286377715059372032?ref_src=twsrc%5Etfw">July 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">576 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-88<br>Kwara-87<br>FCT-82<br>Plateau-62<br>Ondo-39<br>Enugu-28<br>Oyo-26<br>Taraba-24<br>Kaduna-20<br>Ebonyi-20<br>Edo-17<br>Cross River-16<br>Kano-14<br>Rivers-11<br>Ogun-10<br>Delta-9<br>Nasarawa-8<br>Osun-8<br>Katsina-3<br>Imo-2<br>Kebbi-1<br>Borno-1<br><br>37,801 confirmed<br>15,677 discharged<br>805 deaths <a href="https://t.co/LbyjQ81wtJ">pic.twitter.com/LbyjQ81wtJ</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1285710091929427972?ref_src=twsrc%5Etfw">July 21, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
