--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 23rd of July 2020, 604 new confirmed cases and 20 deaths were recorded in Nigeria</li>
-                            <li>Till date, 38948 cases have been confirmed, 16061 cases have been discharged and 833 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 604 new cases are reported from 21 states- Lagos(203), Oyo(87), FCT(79), Edo(41), Osun(35), Ogun(24), Rivers(22), Kaduna(22), Akwa Ibom(20), Plateau(18), Delta(9), Ebonyi(9), Imo(8), Enugu(5), Kano(5), Cross River(5), Katsina(4), Nasarawa(3), Borno(2), Ekiti(2), Bauchi(1)</li>
+                            <li>On the 24th of July 2020, 591 new confirmed cases and 12 deaths were recorded in Nigeria</li>
+                            <li>Till date, 39539 cases have been confirmed, 16559 cases have been discharged and 845 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 591 new cases are reported from 17 states- Oyo(191), Lagos (168), FCT(61), Ondo(29), Osun(26), Ebonyi(24), Edo(23), Ogun(14), Rivers(13), Akwa Ibom (12), Kaduna(10), Katsina(6), Borno (4), Ekiti(3), Delta(3), Imo(3), Niger (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -74,6 +74,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">591 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Oyo-191<br>Lagos-168<br>FCT-61<br>Ondo-29<br>Osun-26<br>Ebonyi-24<br>Edo-23<br>Ogun-14<br>Rivers-13<br>Akwa Ibom-12<br>Kaduna-10<br>Katsina-6<br>Borno-4<br>Ekiti-3<br>Delta-3<br>Imo-3<br>Niger-1<br><br>39,539 confirmed<br>16,559 discharged<br>845 deaths <a href="https://t.co/6ShOHoggtS">pic.twitter.com/6ShOHoggtS</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1286789790109773828?ref_src=twsrc%5Etfw">July 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">One of our responsibilities at NCDC is to scale-up capacity for <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> diagnosis in Nigeria as we respond to the pandemic.<br><br>Kindly note that tests conducted in public facilities within NCDC molecular lab network are FREE of charge. <br><br>Read more:<a href="https://t.co/SqEowDI58H">https://t.co/SqEowDI58H</a> <a href="https://t.co/xtSpC8JsBW">pic.twitter.com/xtSpC8JsBW</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1286953560928919555?ref_src=twsrc%5Etfw">July 25, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">604 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-203<br>Oyo-87<br>FCT-79<br>Edo-41<br>Osun-35<br>Ogun-24<br>Rivers-22<br>Kaduna-22<br>Akwa Ibom-20<br>Plateau-18<br>Delta-9<br>Ebonyi-9<br>Imo-8<br>Enugu-5<br>Kano-5<br>Cross River-5<br>Katsina-4<br>Nasarawa-3<br>Borno-2<br>Ekiti-2<br>Bauchi-1<br><br>38,948 confirmed<br>16,061 discharged<br>833 deaths <a href="https://t.co/fZgmSoSeSH">pic.twitter.com/fZgmSoSeSH</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1286429356286517250?ref_src=twsrc%5Etfw">July 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
