--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 24th of July 2020, 591 new confirmed cases and 12 deaths were recorded in Nigeria</li>
-                            <li>Till date, 39539 cases have been confirmed, 16559 cases have been discharged and 845 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 591 new cases are reported from 17 states- Oyo(191), Lagos (168), FCT(61), Ondo(29), Osun(26), Ebonyi(24), Edo(23), Ogun(14), Rivers(13), Akwa Ibom (12), Kaduna(10), Katsina(6), Borno (4), Ekiti(3), Delta(3), Imo(3), Niger (1)</li>
+                            <li>On the 26th of July 2020, 555 new confirmed cases and 2 deaths were recorded in Nigeria</li>
+                            <li>Till date, 40532 cases have been confirmed, 17374 cases have been discharged and 858 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The new cases are reported from 18 states- Lagos(156), Kano(65), Ogun(57), Plateau(54), Oyo(53), Benue(43), FCT(30), Ondo(18), Kaduna(16), Akwa Ibom(13), Gombe(13), Rivers(12), Ekiti(9), Osun(8), Cross River(3), Borno(2), Edo(2), Bayelsa(1)</li>
                         </ul>
                     </div>
                 </div>
@@ -74,6 +74,9 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">555 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-156<br>Kano-65<br>Ogun-57<br>Plateau-54<br>Oyo-53<br>Benue-43<br>FCT-30<br>Ondo-18<br>Kaduna-16<br>Akwa Ibom-13<br>Gombe-13<br>Rivers-12<br>Ekiti-9<br>Osun-8<br>Cross River-3<br>Borno-2<br>Edo-2<br>Bayelsa-1<br><br>40,532 confirmed<br>17,374 discharged<br>858 deaths <a href="https://t.co/ERchB70Hm3">pic.twitter.com/ERchB70Hm3</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1287505132058488835?ref_src=twsrc%5Etfw">July 26, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">591 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Oyo-191<br>Lagos-168<br>FCT-61<br>Ondo-29<br>Osun-26<br>Ebonyi-24<br>Edo-23<br>Ogun-14<br>Rivers-13<br>Akwa Ibom-12<br>Kaduna-10<br>Katsina-6<br>Borno-4<br>Ekiti-3<br>Delta-3<br>Imo-3<br>Niger-1<br><br>39,539 confirmed<br>16,559 discharged<br>845 deaths <a href="https://t.co/6ShOHoggtS">pic.twitter.com/6ShOHoggtS</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1286789790109773828?ref_src=twsrc%5Etfw">July 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
