--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 26th of July 2020, 555 new confirmed cases and 2 deaths were recorded in Nigeria</li>
-                            <li>Till date, 40532 cases have been confirmed, 17374 cases have been discharged and 858 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The new cases are reported from 18 states- Lagos(156), Kano(65), Ogun(57), Plateau(54), Oyo(53), Benue(43), FCT(30), Ondo(18), Kaduna(16), Akwa Ibom(13), Gombe(13), Rivers(12), Ekiti(9), Osun(8), Cross River(3), Borno(2), Edo(2), Bayelsa(1)</li>
+                            <li>On the 27th of July 2020, 648 new confirmed cases and 2 deaths were recorded in Nigeria</li>
+                            <li>Till date, 41180 cases have been confirmed, 18203 cases have been discharged and 860 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 648 new cases are reported from 21 states- Lagos (180), Plateau (148), FCT (44), Ondo (42), Kwara (38), Rivers (32), Oyo (29), Kaduna (21), Osun (20), Edo (17), Ogun (17), Ekiti (11), Kano (9), Benue (9), Delta (9), Abia (9), Niger (7), Gombe (3), Borno (1), Bauchi (1), Imo (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -74,6 +74,12 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">648 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-180<br>Plateau-148<br>FCT-44<br>Ondo-42<br>Kwara-38<br>Rivers-32<br>Oyo-29<br>Kaduna-21<br>Osun-20<br>Edo-17<br>Ogun-17<br>Ekiti-11<br>Kano-9<br>Benue-9<br>Delta-9<br>Abia-9<br>Niger-7<br>Gombe-3<br>Borno-1<br>Bauchi-1<br>Imo-1<br><br>41,180 confirmed<br>18,203 discharged<br>860 deaths <a href="https://t.co/YTd0E4dhEF">pic.twitter.com/YTd0E4dhEF</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1287878634284257283?ref_src=twsrc%5Etfw">July 27, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
+                        <div class="tweet">
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/TodayInNCDC?src=hash&amp;ref_src=twsrc%5Etfw">#TodayInNCDC</a><br><br>We convened the first ‘<a href="https://twitter.com/hashtag/OrangeNetwork?src=hash&amp;ref_src=twsrc%5Etfw">#OrangeNetwork</a>’ workshop for participating health facilities on infection prevention &amp; control (IPC). <br><br>We are grateful to <a href="https://twitter.com/CDCgov?ref_src=twsrc%5Etfw">@CDCgov</a> &amp; <a href="https://twitter.com/tephinet?ref_src=twsrc%5Etfw">@tephinet</a> for supporting our efforts to strengthen IPC in <a href="https://twitter.com/hashtag/Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#Nigeria</a> through the ‘Turn Nigeria Orange Program’ <a href="https://t.co/PV0ow0WC84">pic.twitter.com/PV0ow0WC84</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1287852726802620423?ref_src=twsrc%5Etfw">July 27, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </div>
                         <div class="tweet">
                             <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">555 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-156<br>Kano-65<br>Ogun-57<br>Plateau-54<br>Oyo-53<br>Benue-43<br>FCT-30<br>Ondo-18<br>Kaduna-16<br>Akwa Ibom-13<br>Gombe-13<br>Rivers-12<br>Ekiti-9<br>Osun-8<br>Cross River-3<br>Borno-2<br>Edo-2<br>Bayelsa-1<br><br>40,532 confirmed<br>17,374 discharged<br>858 deaths <a href="https://t.co/ERchB70Hm3">pic.twitter.com/ERchB70Hm3</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1287505132058488835?ref_src=twsrc%5Etfw">July 26, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
