--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div id="tweetsMainDiv">
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
+                        <div class="tweet">
                         <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">386 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-130<br>Lagos-65<br>Ondo-37<br>Osun-29<br>Plateau-23<br>Rivers-15<br>Enugu-14<br>Nasarawa-12<br>Bayelsa-11<br>Ebonyi-11<br>Ekiti-9<br>Oyo-8<br>Edo-8<br>Abia-6<br>Ogun-3<br>Katsina-3<br>Imo-1<br>Adamawa-1<br><br>43,537 confirmed<br>20,087 discharged<br>883 deaths <a href="https://t.co/JfacBBoawd">pic.twitter.com/JfacBBoawd</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1289689532518920192?ref_src=twsrc%5Etfw">August 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                         <div class="tweet">
