--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 1st of August 2020, 386 new confirmed cases and 4 deaths were recorded in Nigeria</li>
-                            <li>Till date, 43537 cases have been confirmed, 20087 cases have been discharged and 883 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 386 new cases are reported from 18 states- FCT(130), Lagos(65), Ondo(37), Osun(29), Plateau(23), Rivers(15), Enugu(14), Nasarawa(12), Bayelsa(11), Ebonyi(11), Ekiti(9), Oyo(8), Edo(8), Abia(6), Ogun(3), Katsina(3), Imo(1), Adamawa(1)</li>
+                            <li>On the 2nd of August 2020, 304 new confirmed cases and 5 deaths were recorded in Nigeria</li>
+                            <li>Till date, 43841 cases have been confirmed, 20308 cases have been discharged and 888 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 304 new cases are reported from 15 states- Lagos (81), FCT (39), Abia (31), Kaduna (24), Rivers (23), Plateau (16), Cross River (13), Ebonyi (12), Ondo (12) Ekiti (11), Edo (11), Benue (10), Nasarawa (10), Ogun (6), Gombe (5)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,10 +75,10 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                        <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">386 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-130<br>Lagos-65<br>Ondo-37<br>Osun-29<br>Plateau-23<br>Rivers-15<br>Enugu-14<br>Nasarawa-12<br>Bayelsa-11<br>Ebonyi-11<br>Ekiti-9<br>Oyo-8<br>Edo-8<br>Abia-6<br>Ogun-3<br>Katsina-3<br>Imo-1<br>Adamawa-1<br><br>43,537 confirmed<br>20,087 discharged<br>883 deaths <a href="https://t.co/JfacBBoawd">pic.twitter.com/JfacBBoawd</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1289689532518920192?ref_src=twsrc%5Etfw">August 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">304 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-81<br>FCT-39<br>Abia-31<br>Kaduna-24<br>Rivers-23<br>Plateau-16<br>Cross River-13<br>Ebonyi-12<br>Ondo-12<br>Ekiti-11<br>Edo-11<br>Benue-10<br>Nasarawa-10<br>Ogun-6<br>Gombe-5<br><br>43,841 confirmed<br>20,308 discharged<br>888 deaths <a href="https://t.co/MnLCKkA3N7">pic.twitter.com/MnLCKkA3N7</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290051436911288321?ref_src=twsrc%5Etfw">August 2, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a> Good News!<br><br>Our discharge rate increased so remarkably that the cumulative amount of active cases has entered an early phase of flattening.<br><br>Health Systems Specialist, Dr. <a href="https://twitter.com/KobinnaA?ref_src=twsrc%5Etfw">@KobinnaA</a> explains the <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> trends for the period covered in this chart. <a href="https://twitter.com/hashtag/NHWTop10?src=hash&amp;ref_src=twsrc%5Etfw">#NHWTop10</a> <a href="https://t.co/6ZfKlsODlK">pic.twitter.com/6ZfKlsODlK</a></p>&mdash; Nigeria Health Watch (@nighealthwatch) <a href="https://twitter.com/nighealthwatch/status/1289573743736496129?ref_src=twsrc%5Etfw">August 1, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a>: VERY IMPORTANT MESSAGE FROM THE <a href="https://twitter.com/hashtag/PTFCOVID19?src=hash&amp;ref_src=twsrc%5Etfw">#PTFCOVID19</a> FOR THE ELDERLY AND PEOPLE WITH UNDERLYING HEALTH CONDITIONS<a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> <a href="https://t.co/TbPIa2kwLp">pic.twitter.com/TbPIa2kwLp</a></p>&mdash; Fed Min of Info &amp; Cu (@FMICNigeria) <a href="https://twitter.com/FMICNigeria/status/1288941534507937795?ref_src=twsrc%5Etfw">July 30, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
