--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 2nd of August 2020, 304 new confirmed cases and 5 deaths were recorded in Nigeria</li>
-                            <li>Till date, 43841 cases have been confirmed, 20308 cases have been discharged and 888 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 304 new cases are reported from 15 states- Lagos (81), FCT (39), Abia (31), Kaduna (24), Rivers (23), Plateau (16), Cross River (13), Ebonyi (12), Ondo (12) Ekiti (11), Edo (11), Benue (10), Nasarawa (10), Ogun (6), Gombe (5)</li>
+                            <li>On the 3rd of August 2020, 288 new confirmed cases and 8 deaths were recorded in Nigeria</li>
+                            <li>Till date, 44129 cases have been confirmed, 20663 cases have been discharged and 896 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 288 new cases are reported from 15 states- Lagos (88), Kwara (33), Osun (27), FCT (25), Enugu (25), Abia (20), Kaduna (17), Plateau (13), Rivers (13), Delta (10), Gombe (8), Ogun (4), Oyo (3), Katsina (1), Bauchi (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,10 +75,10 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">304 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-81<br>FCT-39<br>Abia-31<br>Kaduna-24<br>Rivers-23<br>Plateau-16<br>Cross River-13<br>Ebonyi-12<br>Ondo-12<br>Ekiti-11<br>Edo-11<br>Benue-10<br>Nasarawa-10<br>Ogun-6<br>Gombe-5<br><br>43,841 confirmed<br>20,308 discharged<br>888 deaths <a href="https://t.co/MnLCKkA3N7">pic.twitter.com/MnLCKkA3N7</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290051436911288321?ref_src=twsrc%5Etfw">August 2, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">288 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-88<br>Kwara-33<br>Osun-27<br>FCT-25<br>Enugu-25<br>Abia-20<br>Kaduna-17<br>Plateau-13<br>Rivers-13<br>Delta-10<br>Gombe-8<br>Ogun-4<br>Oyo-3<br>Katsina-1<br>Bauchi-1<br><br>44,129 confirmed<br>20,663 discharged<br>896 deaths <a href="https://t.co/NbSo7H63Lx">pic.twitter.com/NbSo7H63Lx</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290415085597405186?ref_src=twsrc%5Etfw">August 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a>: VERY IMPORTANT MESSAGE FROM THE <a href="https://twitter.com/hashtag/PTFCOVID19?src=hash&amp;ref_src=twsrc%5Etfw">#PTFCOVID19</a> FOR THE ELDERLY AND PEOPLE WITH UNDERLYING HEALTH CONDITIONS<a href="https://twitter.com/hashtag/TakeResponsibility?src=hash&amp;ref_src=twsrc%5Etfw">#TakeResponsibility</a> <a href="https://t.co/TbPIa2kwLp">pic.twitter.com/TbPIa2kwLp</a></p>&mdash; Fed Min of Info &amp; Cu (@FMICNigeria) <a href="https://twitter.com/FMICNigeria/status/1288941534507937795?ref_src=twsrc%5Etfw">July 30, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Our Rapid Response Team <a href="https://twitter.com/hashtag/NCDCRRT?src=hash&amp;ref_src=twsrc%5Etfw">#NCDCRRT</a> is supporting the Cross River State health team in investigation of suspected <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> outbreaks &amp; decontamination of facilities in affected areas in the state<br><br>Read &#39;Guidelines for the Safe Management of <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> Remains&#39;:<a href="https://t.co/7KzVbQlKLW">https://t.co/7KzVbQlKLW</a> <a href="https://t.co/h82A9qjofA">pic.twitter.com/h82A9qjofA</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290400311170015233?ref_src=twsrc%5Etfw">August 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
