--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 3rd of August 2020, 288 new confirmed cases and 8 deaths were recorded in Nigeria</li>
-                            <li>Till date, 44129 cases have been confirmed, 20663 cases have been discharged and 896 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 288 new cases are reported from 15 states- Lagos (88), Kwara (33), Osun (27), FCT (25), Enugu (25), Abia (20), Kaduna (17), Plateau (13), Rivers (13), Delta (10), Gombe (8), Ogun (4), Oyo (3), Katsina (1), Bauchi (1)</li>
+                            <li>On the 4th of August 2020, 304 new confirmed cases and 14 deaths were recorded in Nigeria</li>
+                            <li>Till date, 44433 cases have been confirmed, 31851 cases have been discharged and 910 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 304 new cases are reported from 19 states- FCT (90), Lagos (59), Ondo (39), Taraba (18), Rivers (17), Borno (15), Adamawa (12), Oyo (11), Delta (9), Edo (6), Bauchi (4), Kwara (4), Ogun (4), Osun (4), Bayelsa (3), Plateau (3), Niger (3), Nasarawa (2) and Kano (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -75,10 +75,7 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">288 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-88<br>Kwara-33<br>Osun-27<br>FCT-25<br>Enugu-25<br>Abia-20<br>Kaduna-17<br>Plateau-13<br>Rivers-13<br>Delta-10<br>Gombe-8<br>Ogun-4<br>Oyo-3<br>Katsina-1<br>Bauchi-1<br><br>44,129 confirmed<br>20,663 discharged<br>896 deaths <a href="https://t.co/NbSo7H63Lx">pic.twitter.com/NbSo7H63Lx</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290415085597405186?ref_src=twsrc%5Etfw">August 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </div>
-                        <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Our Rapid Response Team <a href="https://twitter.com/hashtag/NCDCRRT?src=hash&amp;ref_src=twsrc%5Etfw">#NCDCRRT</a> is supporting the Cross River State health team in investigation of suspected <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> outbreaks &amp; decontamination of facilities in affected areas in the state<br><br>Read &#39;Guidelines for the Safe Management of <a href="https://twitter.com/hashtag/COVID19?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19</a> Remains&#39;:<a href="https://t.co/7KzVbQlKLW">https://t.co/7KzVbQlKLW</a> <a href="https://t.co/h82A9qjofA">pic.twitter.com/h82A9qjofA</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290400311170015233?ref_src=twsrc%5Etfw">August 3, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">304 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-90<br>Lagos-59<br>Ondo-39<br>Taraba-18<br>Rivers-17<br>Borno-15<br>Adamawa-12<br>Oyo-11<br>Delta-9<br>Edo-6<br>Bauchi-4<br>Kwara-4<br>Ogun-4<br>Osun-4<br>Bayelsa-3<br>Plateau-3<br>Niger-3<br>Nasarawa-2<br>Kano-1<br><br>44,433 confirmed<br>31,851 discharged<br>910 deaths <a href="https://t.co/waSTKebCfs">pic.twitter.com/waSTKebCfs</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290780674299957248?ref_src=twsrc%5Etfw">August 4, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
