--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
         <div id="cases">
             <div id="welcomeDiv">
                 <h1>COVID-19 NIGERIA</h1>
-                <P id="date"></P>
+                <P id="date">loding...</P>
             </div>
             <div class="subsequentDivs grey">
                 <h3>Sample Tested</h3>
-                <p id="sample" class="figures"></p>
+                <p id="sample" class="figures">loding...</p>
             </div>
             <div class="subsequentDivs blue">
                 <h3>Confirmed Cases</h3>
-                <p id="confirmedCases" class="figures"></p>
+                <p id="confirmedCases" class="figures">loding...</p>
             </div>
             <div class="subsequentDivs yello">
                 <h3>Active Cases</h3>
-                <p id="activeCases" class="figures"></p>
+                <p id="activeCases" class="figures">loding...</p>
             </div>
             <div class="subsequentDivs green">
                 <h3>Discharged Cases</h3>
-                <p id="discharged" class="figures"></p>
+                <p id="discharged" class="figures">loding...</p>
             </div>
             <div id="blink" class="subsequentDivs red">
                 <h3>Death</h3>
-                <p id="death" class="figures"></p>
+                <p id="death" class="figures">loding...</p>
             </div>
         </div>
 
