--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 4th of August 2020, 304 new confirmed cases and 14 deaths were recorded in Nigeria</li>
-                            <li>Till date, 44433 cases have been confirmed, 31851 cases have been discharged and 910 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 304 new cases are reported from 19 states- FCT (90), Lagos (59), Ondo (39), Taraba (18), Rivers (17), Borno (15), Adamawa (12), Oyo (11), Delta (9), Edo (6), Bauchi (4), Kwara (4), Ogun (4), Osun (4), Bayelsa (3), Plateau (3), Niger (3), Nasarawa (2) and Kano (1)</li>
+                            <li>On the 5th of August 2020, 457 new confirmed cases and 17 deaths were recorded in Nigeria</li>
+                            <li>Till date, 44,890 cases have been confirmed, 32,165 cases have been discharged and 927 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 457 new cases are reported from 21 states- Lagos(137), FCT(76), Plateau(40), Rivers(35), Enugu(34), Oyo(25), Abia(23), Delta(12), Ebonyi (11), Edo(11), Cross River(10), Kwara(10), Kaduna(9), Anambra(7), Ogun(5), Bauchi (3), Imo(3), Nasarawa (2), Osun(2), Ekiti (1), Kano(1)</li>
                         </ul>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">304 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-90<br>Lagos-59<br>Ondo-39<br>Taraba-18<br>Rivers-17<br>Borno-15<br>Adamawa-12<br>Oyo-11<br>Delta-9<br>Edo-6<br>Bauchi-4<br>Kwara-4<br>Ogun-4<br>Osun-4<br>Bayelsa-3<br>Plateau-3<br>Niger-3<br>Nasarawa-2<br>Kano-1<br><br>44,433 confirmed<br>31,851 discharged<br>910 deaths <a href="https://t.co/waSTKebCfs">pic.twitter.com/waSTKebCfs</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1290780674299957248?ref_src=twsrc%5Etfw">August 4, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">457 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-137<br>FCT-76<br>Plateau-40<br>Rivers-35<br>Enugu-34<br>Oyo-25<br>Abia-23<br>Delta-12<br>Edo-11<br>Ebonyi-11<br>Cross River-10<br>Kwara-10<br>Kaduna-9<br>Anambra-7<br>Ogun-5<br>Imo-3<br>Bauchi-3<br>Osun-2<br>Nasarawa-2<br>Kano-1<br>Ekiti-1<br><br>44,890 confirmed<br>32,165 discharged<br>927 deaths <a href="https://t.co/Nzupdh7X2i">pic.twitter.com/Nzupdh7X2i</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1291135942103912449?ref_src=twsrc%5Etfw">August 5, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
