--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 5th of August 2020, 457 new confirmed cases and 17 deaths were recorded in Nigeria</li>
-                            <li>Till date, 44,890 cases have been confirmed, 32,165 cases have been discharged and 927 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 457 new cases are reported from 21 states- Lagos(137), FCT(76), Plateau(40), Rivers(35), Enugu(34), Oyo(25), Abia(23), Delta(12), Ebonyi (11), Edo(11), Cross River(10), Kwara(10), Kaduna(9), Anambra(7), Ogun(5), Bauchi (3), Imo(3), Nasarawa (2), Osun(2), Ekiti (1), Kano(1)</li>
+                            <li>On the 6th of August 2020, 354 new confirmed cases and 3 deaths were recorded in Nigeria</li>
+                            <li>Till date, 45244 cases have been confirmed, 32430 cases have been discharged and 930 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 354 new cases are reported from 17 states- FCT (78), Lagos (76), Kaduna (23), Ebonyi (19), Oyo (18), Nasarawa (17), Rivers (17), Delta (16), Kwara (15), Akwa Ibom (13), Edo (12), Ogun (12), Plateau (11), Kano (9), Bauchi (6), Borno (6), Ekiti (6)</li>
                         </ul>
                     </div>
                 </div>
