--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 6th of August 2020, 354 new confirmed cases and 3 deaths were recorded in Nigeria</li>
-                            <li>Till date, 45244 cases have been confirmed, 32430 cases have been discharged and 930 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 354 new cases are reported from 17 states- FCT (78), Lagos (76), Kaduna (23), Ebonyi (19), Oyo (18), Nasarawa (17), Rivers (17), Delta (16), Kwara (15), Akwa Ibom (13), Edo (12), Ogun (12), Plateau (11), Kano (9), Bauchi (6), Borno (6), Ekiti (6)</li>
+                            <li>On the 7th of August 2020, 443 new confirmed cases and 6 deaths were recorded in Nigeria</li>
+                            <li>Till date, 45687 cases have been confirmed, 32637 cases have been discharged and 936 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>he 443 new cases are reported from 19 states- Plateau (103), Lagos (70), FCT (60), Ondo (35), Edo (27), Rivers (27), Kaduna (20), Osun (19), Borno (18), Oyo (18), Kwara (11), Adamawa (9), Nasarawa (7), Gombe (6), Bayelsa (4), Imo (4), Bauchi (2), Ogun (2) and Kano (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">457 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-137<br>FCT-76<br>Plateau-40<br>Rivers-35<br>Enugu-34<br>Oyo-25<br>Abia-23<br>Delta-12<br>Edo-11<br>Ebonyi-11<br>Cross River-10<br>Kwara-10<br>Kaduna-9<br>Anambra-7<br>Ogun-5<br>Imo-3<br>Bauchi-3<br>Osun-2<br>Nasarawa-2<br>Kano-1<br>Ekiti-1<br><br>44,890 confirmed<br>32,165 discharged<br>927 deaths <a href="https://t.co/Nzupdh7X2i">pic.twitter.com/Nzupdh7X2i</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1291135942103912449?ref_src=twsrc%5Etfw">August 5, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">443 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Plateau-103<br>Lagos-70<br>FCT-60<br>Ondo-35<br>Edo-27<br>Rivers-27<br>Kaduna-20<br>Osun-19<br>Borno-18<br>Oyo-18<br>Kwara-11<br>Adamawa-9<br>Nasarawa-7<br>Gombe-6<br>Bayelsa-4<br>Imo-4<br>Bauchi-2<br>Ogun-2<br>Kano-1<br><br>45,687 confirmed<br>32,637 discharged<br>936 deaths <a href="https://t.co/X2pZRogn59">pic.twitter.com/X2pZRogn59</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1291863143472340993?ref_src=twsrc%5Etfw">August 7, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
