--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 7th of August 2020, 443 new confirmed cases and 6 deaths were recorded in Nigeria</li>
-                            <li>Till date, 45687 cases have been confirmed, 32637 cases have been discharged and 936 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>he 443 new cases are reported from 19 states- Plateau (103), Lagos (70), FCT (60), Ondo (35), Edo (27), Rivers (27), Kaduna (20), Osun (19), Borno (18), Oyo (18), Kwara (11), Adamawa (9), Nasarawa (7), Gombe (6), Bayelsa (4), Imo (4), Bauchi (2), Ogun (2) and Kano (1)</li>
+                            <li>On the 8th of August 2020, 453 new confirmed cases and 6 deaths were recorded in Nigeria</li>
+                            <li>Till date, 46140 cases have been confirmed, 33044 cases have been discharged and 942 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 453 new cases are reported from 20 states- FCT (75), Lagos (71), Benue (53), Delta (39), Borno (30), Enugu (25), Plateau (24), Osun (20), Abia (19), Oyo (17), Kaduna (16), Kano (13), Ebonyi (13), Ogun (9), Kwara (7), Ondo (6), Gombe (3), Ekiti (2), Akwa Ibom (1) and Rivers (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="dark"><p lang="tl" dir="ltr">443 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Plateau-103<br>Lagos-70<br>FCT-60<br>Ondo-35<br>Edo-27<br>Rivers-27<br>Kaduna-20<br>Osun-19<br>Borno-18<br>Oyo-18<br>Kwara-11<br>Adamawa-9<br>Nasarawa-7<br>Gombe-6<br>Bayelsa-4<br>Imo-4<br>Bauchi-2<br>Ogun-2<br>Kano-1<br><br>45,687 confirmed<br>32,637 discharged<br>936 deaths <a href="https://t.co/X2pZRogn59">pic.twitter.com/X2pZRogn59</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1291863143472340993?ref_src=twsrc%5Etfw">August 7, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-theme="light"><p lang="tl" dir="ltr">453 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-75<br>Lagos-71<br>Benue-53<br>Delta-39<br>Borno-30<br>Enugu-25<br>Plateau-24<br>Osun-20<br>Abia-19<br>Oyo-17<br>Kaduna-16<br>Kano-13<br>Ebonyi-13<br>Ogun-9<br>Kwara-7<br>Ondo-6<br>Gombe-3<br>Ekiti-2<br>Akwa Ibom-1<br>Rivers-1<br><br>46,140 confirmed<br>33,044 discharged<br>942 deaths <a href="https://t.co/2DrEcdQTN5">pic.twitter.com/2DrEcdQTN5</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1292224486771761152?ref_src=twsrc%5Etfw">August 8, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
