--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
     <!----------------FOOTER---------------------->
     <footer>
         <div id="bio">
-            <p id="about">If you like what you see here chances are you may like to know more about the developer, you can always find me here on <a class="anchorTag" href="https://twitter.com/shamxeed05">Twitter</a>&#128521;</p>
+            <p id="about">
+                If you like what you see here chances are you may like to know more about the developer, you can always find me Twitter.
+            </p>
         </div>
+        <div id="followBtn"><a class="twitter-follow-button" href="https://twitter.com/shamxeed05" data-show-screen-name="false">Follow </a></div>
         <p id="copyright">&copy; 
             <script> let today = new Date()
                      let year = today.getFullYear()
