--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 8th of August 2020, 453 new confirmed cases and 6 deaths were recorded in Nigeria</li>
-                            <li>Till date, 46140 cases have been confirmed, 33044 cases have been discharged and 942 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 453 new cases are reported from 20 states- FCT (75), Lagos (71), Benue (53), Delta (39), Borno (30), Enugu (25), Plateau (24), Osun (20), Abia (19), Oyo (17), Kaduna (16), Kano (13), Ebonyi (13), Ogun (9), Kwara (7), Ondo (6), Gombe (3), Ekiti (2), Akwa Ibom (1) and Rivers (1)</li>
+                            <li>On the 9th of August 2020, 437 new confirmed cases and 3 deaths were recorded in Nigeria</li>
+                            <li>Till date, 46577 cases have been confirmed, 33186 cases have been discharged and 945 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 437 new cases are reported from 17 states- Lagos (107), FCT (91), Plateau (81), Kaduna (32), Ogun (30), Kwara (24), Ebonyi (19), Ekiti (17), Oyo (8), Borno (6), Edo (6), Kano (4), Nasarawa (3), Osun (3), Taraba (3), Gombe (2) and Bauchi (1)</li>
                         </ul>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     <h2>Tweets by NCDC</h2>
                     <div id="tweets">
                         <div class="tweet">
-                            <blockquote class="twitter-tweet" data-theme="light"><p style="font-size: 16px;" lang="tl" dir="ltr">453 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>FCT-75<br>Lagos-71<br>Benue-53<br>Delta-39<br>Borno-30<br>Enugu-25<br>Plateau-24<br>Osun-20<br>Abia-19<br>Oyo-17<br>Kaduna-16<br>Kano-13<br>Ebonyi-13<br>Ogun-9<br>Kwara-7<br>Ondo-6<br>Gombe-3<br>Ekiti-2<br>Akwa Ibom-1<br>Rivers-1<br><br>46,140 confirmed<br>33,044 discharged<br>942 deaths <a href="https://t.co/2DrEcdQTN5">pic.twitter.com/2DrEcdQTN5</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1292224486771761152?ref_src=twsrc%5Etfw">August 8, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            <blockquote class="twitter-tweet" data-dnt="true"><p lang="tl" dir="ltr">437 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-107<br>FCT-91<br>Plateau-81<br>Kaduna-32<br>Ogun-30<br>Kwara-24<br>Ebonyi-19<br>Ekiti-17<br>Oyo-8<br>Borno-6<br>Edo-6<br>Kano-4<br>Nasarawa-3<br>Osun-3<br>Taraba-3<br>Gombe-2<br>Bauchi-1<br><br>46,577 confirmed<br>33,186 discharged<br>945 deaths <a href="https://t.co/d70c7hFaHc">pic.twitter.com/d70c7hFaHc</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1292585890259369991?ref_src=twsrc%5Etfw">August 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                     </div>
                 </div>
