--- a/index.html
+++ b/index.html
@@ -69,13 +69,10 @@
                 </div>
 
                 <!------------------EMBEDDING NCDC TWEETS----------------------->
-                <div id="tweetsMainDiv">
-                    <h2>Tweets by NCDC</h2>
-                    <div id="tweets">
-                        <div class="tweet">
-                            <blockquote class="twitter-tweet" data-dnt="true"><p lang="tl" dir="ltr">437 new cases of <a href="https://twitter.com/hashtag/COVID19Nigeria?src=hash&amp;ref_src=twsrc%5Etfw">#COVID19Nigeria</a>;<br><br>Lagos-107<br>FCT-91<br>Plateau-81<br>Kaduna-32<br>Ogun-30<br>Kwara-24<br>Ebonyi-19<br>Ekiti-17<br>Oyo-8<br>Borno-6<br>Edo-6<br>Kano-4<br>Nasarawa-3<br>Osun-3<br>Taraba-3<br>Gombe-2<br>Bauchi-1<br><br>46,577 confirmed<br>33,186 discharged<br>945 deaths <a href="https://t.co/d70c7hFaHc">pic.twitter.com/d70c7hFaHc</a></p>&mdash; NCDC (@NCDCgov) <a href="https://twitter.com/NCDCgov/status/1292585890259369991?ref_src=twsrc%5Etfw">August 9, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </div>
-                    </div>
+                <div id="tweetsMainDiv">                   
+                    <div class="tweet">
+                        <a class="twitter-timeline" data-width="350" data-height="500" data-dnt="true" href="https://twitter.com/NCDCgov?ref_src=twsrc%5Etfw">Tweets by NCDCgov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>                  
                 </div>
             </div>
         </div>
