--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 9th of August 2020, 437 new confirmed cases and 3 deaths were recorded in Nigeria</li>
-                            <li>Till date, 46577 cases have been confirmed, 33186 cases have been discharged and 945 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 437 new cases are reported from 17 states- Lagos (107), FCT (91), Plateau (81), Kaduna (32), Ogun (30), Kwara (24), Ebonyi (19), Ekiti (17), Oyo (8), Borno (6), Edo (6), Kano (4), Nasarawa (3), Osun (3), Taraba (3), Gombe (2) and Bauchi (1)</li>
+                            <li>On the 10th of August 2020, 290 new confirmed cases and 5 deaths were recorded in Nigeria</li>
+                            <li>Till date, 46867 cases have been confirmed, 33346 cases have been discharged and 950 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 290 new cases are reported from 16 states- Lagos (82), Plateau (82), Oyo (19), FCT (18), Edo (16), Kaduna (15), Enugu (9), Ogun (9), Kano (8), Kwara (8), Cross River (5), Ondo (5), Rivers (5), Ekiti (4), Imo (3) and Borno (2)</li>
                         </ul>
                     </div>
                 </div>
