--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 10th of August 2020, 290 new confirmed cases and 5 deaths were recorded in Nigeria</li>
-                            <li>Till date, 46867 cases have been confirmed, 33346 cases have been discharged and 950 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 290 new cases are reported from 16 states- Lagos (82), Plateau (82), Oyo (19), FCT (18), Edo (16), Kaduna (15), Enugu (9), Ogun (9), Kano (8), Kwara (8), Cross River (5), Ondo (5), Rivers (5), Ekiti (4), Imo (3) and Borno (2)</li>
+                            <li>On the 11th of August 2020, 423 new confirmed cases and 6 deaths were recorded in Nigeria</li>
+                            <li>Till date, 47290 cases have been confirmed, 33609 cases have been discharged and 956 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 423 new cases are reported from 22 states- Lagos (117), FCT (40), Ondo (35), Rivers (28), Osun (24), Benue (21), Abia (19), Ogun (19), Ebonyi (18), Delta (17), Kwara (17), Kaduna (15), Anambra (14), Ekiti (11), Kano (9), Imo (6), Gombe (4), Oyo (3), Taraba (3), Bauchi (1), Edo (1) and Nasarawa (1)</li>
                         </ul>
                     </div>
                 </div>
