--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 11th of August 2020, 423 new confirmed cases and 6 deaths were recorded in Nigeria</li>
-                            <li>Till date, 47290 cases have been confirmed, 33609 cases have been discharged and 956 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 423 new cases are reported from 22 states- Lagos (117), FCT (40), Ondo (35), Rivers (28), Osun (24), Benue (21), Abia (19), Ogun (19), Ebonyi (18), Delta (17), Kwara (17), Kaduna (15), Anambra (14), Ekiti (11), Kano (9), Imo (6), Gombe (4), Oyo (3), Taraba (3), Bauchi (1), Edo (1) and Nasarawa (1)</li>
+                            <li>On the 12th of August 2020, 453 new confirmed cases and no deaths were recorded in Nigeria</li>
+                            <li>Till date, 47743 cases have been confirmed, 33943 cases have been discharged and 956 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 453 new cases are reported from 16 states- Lagos(113), FCT(72), Plateau(59), Enugu(55), Kaduna(38), Ondo(32), Osun(26), Ebonyi(20), Ogun(9), Delta(8), Borno(7), Akwa Ibom(6), Oyo(5), Bauchi(1), Kano(1) and Ekiti(1)</li>
                         </ul>
                     </div>
                 </div>
