--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
 
         <!-----------------VIDEO TIPS AND FACTS--------------------->
         <div id="videoTipsMainDiv">
-            <h2>Tips and Facts</h2>
             <div id="videoTipsDiv">
                 <div class="videoTips">
-                    <iframe height="315" src="https://www.youtube.com/embed/Kk9RvLDp_Vg?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+                    <iframe height="315" src="https://www.youtube.com/embed/Kk9RvLDp_Vg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
                 </div>
                 <div class="videoTips">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/3mX4MzTE6wk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
