--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 12th of August 2020, 453 new confirmed cases and no deaths were recorded in Nigeria</li>
-                            <li>Till date, 47743 cases have been confirmed, 33943 cases have been discharged and 956 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>On the 13th of August 2020, 373 new confirmed cases and 10 deaths were recorded in Nigeria</li>
+                            <li>Till date, 48116 cases have been confirmed, 34309 cases have been discharged and 966 deaths have been recorded in 36 states and the Federal Capital Territory</li>
                             <li>The 453 new cases are reported from 16 states- Lagos(113), FCT(72), Plateau(59), Enugu(55), Kaduna(38), Ondo(32), Osun(26), Ebonyi(20), Ogun(9), Delta(8), Borno(7), Akwa Ibom(6), Oyo(5), Bauchi(1), Kano(1) and Ekiti(1)</li>
                         </ul>
                     </div>
