--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <ul>
                             <li>On the 13th of August 2020, 373 new confirmed cases and 10 deaths were recorded in Nigeria</li>
                             <li>Till date, 48116 cases have been confirmed, 34309 cases have been discharged and 966 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 453 new cases are reported from 16 states- Lagos(113), FCT(72), Plateau(59), Enugu(55), Kaduna(38), Ondo(32), Osun(26), Ebonyi(20), Ogun(9), Delta(8), Borno(7), Akwa Ibom(6), Oyo(5), Bauchi(1), Kano(1) and Ekiti(1)</li>
+                            <li>The 373 new cases are reported from 20 states- Lagos(69), Osun(41), Kaduna(40), Oyo(40), FCT(35), Plateau(22), Rivers(19), Kano(17), Ondo(17), Ogun(15), Abia(14), Gombe(12), Imo(9), Enugu(7), Kwara(6), Delta(5), Niger(2), Borno(1), Bauchi(1) and Nasarawa(1).</li>
                         </ul>
                     </div>
                 </div>
