--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         <h2>Highlights</h2>
                         <ul>
                             <li>On the 14th of August 2020, 329 new confirmed cases and 7 deaths were recorded in Nigeria</li>
-                            <li>Till date, 48116 cases have been confirmed, 34309 cases have been discharged and 966 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 373 new cases are reported from 20 states- Lagos(69), Osun(41), Kaduna(40), Oyo(40), FCT(35), Plateau(22), Rivers(19), Kano(17), Ondo(17), Ogun(15), Abia(14), Gombe(12), Imo(9), Enugu(7), Kwara(6), Delta(5), Niger(2), Borno(1), Bauchi(1) and Nasarawa(1).</li>
+                            <li>Till date, 48445 cases have been confirmed, 35998 cases have been discharged and 973 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 329 new cases are reported from 21 states- Lagos(113), Kaduna(49), FCT(33), Plateau(24), Kano(16), Edo(15), Ogun(14), Delta(13), Osun(10), Oyo(8), Ekiti(6) Bayelsa(6), Akwa Ibom(5), Borno(4), Enugu(4), Ebonyi(3), Rivers(2), Bauchi(1), Nasarawa(1), Gombe(1) and Niger(1).</li>
                         </ul>
                     </div>
                 </div>
