--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 14th of August 2020, 329 new confirmed cases and 7 deaths were recorded in Nigeria</li>
-                            <li>Till date, 48445 cases have been confirmed, 35998 cases have been discharged and 973 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 329 new cases are reported from 21 states- Lagos(113), Kaduna(49), FCT(33), Plateau(24), Kano(16), Edo(15), Ogun(14), Delta(13), Osun(10), Oyo(8), Ekiti(6) Bayelsa(6), Akwa Ibom(5), Borno(4), Enugu(4), Ebonyi(3), Rivers(2), Bauchi(1), Nasarawa(1), Gombe(1) and Niger(1).</li>
+                            <li>On the 15th of August 2020, 325 new confirmed cases and 1 death were recorded in Nigeria</li>
+                            <li>Till date, 48770 cases have been confirmed, 36290 cases have been discharged and 974 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 325 new cases are reported from 20 states- Lagos (87), FCT (49), Gombe (28), Ebonyi (20), Plateau (19), Kwara (18), Enugu (17), Imo (12), Rivers (12), Kaduna (11), Ogun (10), Edo (9), Oyo (9), Ondo (8), Osun (8), Ekiti (4), Borno (1), Kano (1), Bauchi (1) and Nasarawa (1).</li>
                         </ul>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
     <footer>
         <div id="bio">
             <p id="about">
-                If you like what you see here chances are you may like to know more about the developer, you can always find me Twitter.
+                If you like what you see here chances are you may like to know more about the developer, you can always find me on Twitter.
             </p>
         </div>
         <div id="followBtn"><a class="twitter-follow-button" href="https://twitter.com/shamxeed05" data-show-screen-name="false">Follow </a></div>
