--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 15th of August 2020, 325 new confirmed cases and 1 death were recorded in Nigeria</li>
-                            <li>Till date, 48770 cases have been confirmed, 36290 cases have been discharged and 974 deaths have been recorded in 36 states and the Federal Capital Territory</li>
-                            <li>The 325 new cases are reported from 20 states- Lagos (87), FCT (49), Gombe (28), Ebonyi (20), Plateau (19), Kwara (18), Enugu (17), Imo (12), Rivers (12), Kaduna (11), Ogun (10), Edo (9), Oyo (9), Ondo (8), Osun (8), Ekiti (4), Borno (1), Kano (1), Bauchi (1) and Nasarawa (1).</li>
+                            <li>On the 16th of August 2020, 298 new confirmed cases and 1 death was recorded in Nigeria</li>
+                            <li>Till date, 49068 cases have been confirmed, 36497 cases have been discharged and 975 deaths have been recorded in 36 states and the Federal Capital Territory</li>
+                            <li>The 298 new cases are reported from 16 states- Plateau (108), Kaduna (49), Lagos (47), Ogun (18), Osun (17), FCT (15), Ondo (14), Edo (8), Oyo (6), Akwa Ibom (4), Cross River (4), Borno (3), Ekiti (2), Bauchi (1), Kano (1) and Rivers (1).</li>
                         </ul>
                     </div>
                 </div>
